tests/compile-fail/generated/derives-span-PartialOrd-struct.stderr
error[E0277]: can't compare `Error` with `Error`
  --> $DIR/derives-span-PartialOrd-struct.rs:15:5
   |
15 |     x: Error
   |     ^ no implementation for `Error < Error` and `Error > Error`
   |
   = help: the trait `std::cmp::PartialOrd` is not implemented for `Error`
   = note: required by `std::cmp::PartialOrd::partial_cmp`
